# OFP-Ikamoana

./: .gitignore  pyproject.toml
ikamoana/: ikaseapodym.py  ikasimulation.py
ikamoana/dymfiles/: dymtodataarray.py
ikamoana/feedinghabitat/: feedinghabitat.py  feedinghabitatconfigreader.py  habitatdatastructure.py
ikamoana/fisherieseffort/: OLDfisherieseffort.py  fisherieseffort.py
ikamoana/ikafish/: behaviours.py  ikafish.py
ikamoana/ikamoanafields/: ikamoanafields.py
ikamoana/utils/: configfilegenerator.py  converter.py  feedinghabitatutils.py  fieldmanipulation.py  filemanipulation.py  ikamoanafieldsutils.py  old_ikamoana_functions.py  particle_file_density_functions.py
notebook/: 1_IkaSimulation.ipynb  2_IkaSeapodym_IkaFish.ipynb  2_b_IkaSeapodym_IkaFishDebug.ipynb  3_IkaSeapodym_IkaTag.ipynb  4_IkaSeapodym_IkaMix.ipynb  5_IkaSeapodym_IkaFishDebug_025_30.ipynb
notebook/CONFIG_GENERATOR/: CSV_to_config_files.ipynb  Simple_test.ipynb
notebook/DYM/: DYM_Transforme_DymFile_To_DataArray.ipynb
notebook/FEEDING_HABITAT/: FH_Basic_Use_Of_EvolvingFeedingHabitat.ipynb  FH_Basic_Use_Of_FeedingHabitat.ipynb  FH_Evolutive_Feeding_Habitat.ipynb  FH_Habitat_Using_Length_Or_Weight.ipynb  FH_Normalize_coords.ipynb  FH_closest_coords.ipynb  FH_indonesian_filter.ipynb
notebook/FISHERIES_EFFORT/: FE_1_Reindex_coordinates.ipynb  FE_2_Effor_by_fishery_Wrapper.ipynb
notebook/IKAMOANA_FIELDS/: IF_1_Initialization.ipynb  IF_Produce_Ikamoana_Fields.ipynb  IF_export_effort.ipynb
notebook/IKAMOANA_vs_SEAPODYM/: test_025_degree_5th_cohort.ipynb  (+3 more)
(+8 files in other folders)
