[tool.poetry]
name = "ofp-ikamoana"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xarray = "*"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
parcels = "^3.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
